<resources>

    <!--application name-->
    <string name="app_name">ACMS</string>

    <!--tab name-->
    <string name="tab_recent">Recent Videos</string>
    <string name="tab_category">Category</string>

    <!--AdMob-->
    <string name="admob_publisher_id">pub-3940256099942544</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--navigation drawer menu name-->
    <string name="drawer_recent">Recent Videos</string>
    <string name="drawer_category">Category</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_separator_name">Other</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_about">About</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/dev?id=8308626920110310494</string>
    <string name="privacy_policy_url">https://privacypolicies.com/privacy/view/ee7beff39fce2e1159cb70557fab0947</string>
    <string name="share_text">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>

    <!-- youtube -->
    <string name="youtube_api_key">AIzaSyCbehD6DCeDZHaGl8SUWKh1koTiHwKcvKY</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!--app about information-->
    <string name="about_app_name">Application Name</string>
    <string name="about_app_version">Build Version</string>
    <string name="about_app_email">Email</string>
    <string name="about_app_copyright">Copyright</string>
    <string name="about_app_rate">Rate</string>
    <string name="about_app_more">More</string>
    <string name="about_app_privacy_policy">Terms &amp; Policies</string>
    <string name="sub_about_app_version">Version 1.0</string>
    <string name="sub_about_app_email">aadvaithconsultancy@gmail.com</string>
    <string name="sub_about_app_copyright">Copyright &#169; 2020 Aadvaith Consultancy \n All rights reserved</string>
    <string name="sub_about_app_rate">Give your rate and feedback</string>
    <string name="sub_about_app_more">More apps from developer</string>
    <string name="sub_about_app_privacy_policy">Terms &amp; Policies of Your Videos Channel</string>

    <!--network & error message-->
    <string name="network_required">Required Internet to Play Video!</string>
    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">No internet connections found. Check your connection or try again!</string>
    <string name="no_internet_text">No Internet Connection!</string>
    <string name="no_category_found">No category found!!</string>
    <string name="no_post_found">if you want to continue search, please try enter another keyword!</string>
    <string name="msg_search_input">Please Insert Keyword</string>

    <!--favorite-->
    <string name="favorite_add">Add to Favorite</string>
    <string name="favorite_remove">Remove from Favorite</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="favorite_removed">Removed from Favorite</string>
    <string name="no_favorite_found">Your favorite list is empty because you don\'t add any videos in the favorite menu</string>

    <!--others-->
    <string name="press_again_to_exit">Press again to exit app</string>
    <string name="video_count_text">video(s)</string>
    <string name="views_count">views</string>
    <string name="btn_retry">Retry</string>
    <string name="search">Search</string>
    <string name="search_text">Search&#8230;</string>
    <string name="share">Share</string>

</resources>
