<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lyt_no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:src="@drawable/ic_no_internet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/failed_title_text"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/failed_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/failed_text"
                android:textAlignment="center" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/lyt_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/colorRipple"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <Button
                    android:id="@+id/failed_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:background="@color/colorAccent"
                    android:text="@string/btn_retry"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </com.balysv.materialripple.MaterialRippleLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minLines="6"
                android:text="" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>